# eigenRep

./: .gitignore  BSplineTrajectoryGenerator.cpp  BUILD  CMakeLists.txt  CubicSplineInterpolator.cpp  FirstOrderLowPassFilter.cpp  FirstOrderLowPassFilter2.cpp  HighPassFilter.cpp  README.md  ReferenceExample.cpp  SecondOrderIIRFilter.cpp  eigenEx2.cpp  eigenEx4.cpp  minimize_joint_velocities.cpp  moore_penrose_example.cpp  wheelchairXYZ.cpp
.cache/clangd/index/: eigenEx1.cpp.A40D399348E63AA6.idx  eigenEx2.cpp.522E9AA7E72A56E0.idx  eigenEx3.cpp.6F3488E5FEE3ED74.idx  eigenEx4.cpp.D3756390E71BC5BF.idx  wheelchairXYZ.cpp.A3387374B83AF01C.idx
